<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/mg_padding_left_right_content"
    android:paddingRight="@dimen/mg_padding_left_right_content"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_title_large"
        android:id="@+id/mg_main_account_tv_login"
        android:layout_gravity="center"
        android:text="@string/mg_main_account_text_title_main"
        />
    <LinearLayout
        android:id="@+id/mg_main_account_ll_migame"
        android:layout_marginTop="@dimen/mg_spacing_button_main"
        style="@style/item_main_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="1dp"
            android:layout_height="@dimen/mg_size_icon_button"/>
        <TextView

            style="@style/item_text_menu"
            android:id="@+id/mg_main_account_tv_migame"
            android:text="@string/mg_main_account_text_button_migame"
            android:textColor="@color/colorRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mg_main_account_ll_fb"
        android:layout_marginTop="@dimen/mg_spacing_button_main"
        style="@style/item_main_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/fb"
            android:layout_width="@dimen/mg_size_icon_button"
            android:layout_height="@dimen/mg_size_icon_button"/>
        <View
            android:layout_width="5dp"
            android:layout_height="1dp"/>
        <TextView
            android:textColor="@color/colorTitle"
            style="@style/item_text_menu"
            android:id="@+id/mg_main_account_tv_fb"
            android:text="@string/mg_main_account_text_button_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:textColor="#ea4237"
        android:id="@+id/mg_main_account_ll_gg"
        android:layout_marginTop="@dimen/mg_spacing_button_main"
        style="@style/item_main_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/gg"
            android:layout_width="@dimen/mg_size_icon_button"
            android:layout_height="@dimen/mg_size_icon_button"/>
        <View
            android:layout_width="5dp"
            android:layout_height="1dp"/>
        <TextView
            style="@style/item_text_menu"
            android:id="@+id/mg_main_account_tv_gg"
            android:text="@string/mg_main_account_text_button_gg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mg_main_account_ll_qp"
        android:layout_marginTop="@dimen/mg_spacing_button_main"
        style="@style/item_main_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/cn"
            android:layout_width="34dp"
            android:layout_height="@dimen/mg_size_icon_button"/>
        <View
            android:layout_width="5dp"
            android:layout_height="1dp"/>
        <TextView
            android:textColor="#4dc36b"
            style="@style/item_text_menu"
            android:id="@+id/mg_main_account_tv_qp"
            android:text="@string/mg_main_account_text_button_qp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>