<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mg_bg_radius"
    >
    <include layout="@layout/mg_fragment_layout_back" android:id="@+id/mg_fragment_forget_pass_ll_back"/>
    <LinearLayout
        android:paddingLeft="@dimen/mg_padding_left_right_content"
        android:paddingRight="@dimen/mg_padding_left_right_content"
        android:layout_below="@+id/mg_fragment_forget_pass_ll_back"
        android:id="@+id/mg_fragment_foget_pass_top_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<!--        <ImageView-->
<!--            android:padding="6dp"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:src="@drawable/migamesdk_ic_back"-->
<!--            android:id="@+id/fragment_foget_pass_iv_back"-->
<!--            />-->
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/text_title_medium"
            android:layout_weight="1"
            android:textColor="@color/colorRegister"
            android:layout_width="match_parent"
            android:text="Quên mật khẩu"
            android:layout_height="wrap_content"/>
<!--        <ImageView-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:src="@drawable/migamesdk_ic_back"-->
<!--            android:visibility="invisible"-->
<!--            />-->
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_marginLeft="@dimen/mg_padding_left_right_content"
        android:layout_marginRight="@dimen/mg_padding_left_right_content"
        android:layout_below="@+id/mg_fragment_foget_pass_top_bar"
        android:layout_width="match_parent"
        android:foregroundGravity="bottom"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/fragment_forget_pass_ll_input"

            android:paddingLeft="@dimen/padding_left_right_input"
            android:paddingRight="@dimen/padding_left_right_input"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
<!--            <ImageView-->
<!--                android:visibility="invisible"-->
<!--                android:layout_margin="4dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="@dimen/migamesdk_height_logo_gg"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:src="@drawable/migamesdk_logo_gg"-->
<!--                android:layout_gravity="center"-->
<!--                android:id="@+id/fragment_forget_pass_iv_logo"-->
<!--                />-->

            <TextView
                android:layout_gravity="center"
                android:textStyle="italic|bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTitle"
                android:text="@string/mg_text_account_or_email"
                />
            <EditText
                android:layout_marginTop="@dimen/mg_spacing_edittext_input"
                android:paddingRight="50dp"
                style="@style/item_edittext_input"
                android:id="@+id/mg_fragment_forget_pass_ed_email"
                android:drawableLeft="@drawable/user"
                android:hint="@string/mg_text_hint_account_or_email"

                android:drawablePadding="5dp"
                />

                <TextView

                    android:layout_marginTop="@dimen/mg_spacing_edittext_input"
                    style="@style/item_main_button"
                    android:background="@drawable/mg_bg_button_register_selector"
                    android:text="@string/mg_text_confirm"
                    android:textColor="@color/colorBackground"
                    android:id="@+id/fragment_forget_pass_submit"
                />
            <LinearLayout
                android:layout_marginTop="@dimen/mg_spacing_button_main"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/mg_fragment_forget_pass_tv_login"
                    style="@style/text_title_medium"
                    android:text="@string/mg_text_forget_pass_login"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black_overlay"
                    />

                <TextView
                    android:id="@+id/mg_fragment_forget_pass_tv_register"
                    style="@style/text_title_medium"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:textStyle="bold"
                    android:text="@string/mg_text_forget_pass_register"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black_overlay"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
<!--    <include android:layout_alignParentTop="true" android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" layout="@layout/top_bar_icon" android:id="@+id/activity_login_top_bar"/>-->
<!--    <ImageView-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@+id/activity_login_top_bar"-->
<!--        android:layout_above="@+id/activity_login_ll_input"-->
<!--        android:paddingBottom="@dimen/padding_top_bottom_input"-->
<!--        android:paddingTop="@dimen/padding_top_bottom_input"-->

<!--        android:visibility="invisible"-->
<!--        android:scaleType="fitCenter"-->
<!--        />-->


<!--    <include android:layout_below="@+id/activity_login_top_bar" layout="@layout/view_result_load_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->

</RelativeLayout>